# html_and_py

./: README.md  setup.cfg
.github/: FUNDING.yml
src/html-and-py/: html-and-py.py
src/html_and_py/: __init__.py  html_and_py.py
