[metadata]
name = html-and-py
version = 1.0.0
author = Whoeza
description = A lightweight solution to generating HTML-formatted strings, in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Whoeza/html-and-py
project_urls =
    Bug Tracker = https://github.com/Whoeza/html-and-py/issues
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
	Programming Language :: ML
	Programming Language :: Python :: 3.10
	Topic :: Software Development :: Code Generators
	Topic :: Text Processing :: Markup :: HTML

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src