[metadata]
name = html_and_py
version = 1.0.10
author = Whoeza
description = A lightweight solution to generating HTML-formatted strings, in Python
license = GNU GPLv3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Whoeza/html_and_py
project_urls =
    Bug Tracker = https://github.com/Whoeza/html_and_py/issues
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
	Programming Language :: ML
	Programming Language :: Python :: 3
	Topic :: Software Development :: Code Generators
	Topic :: Text Processing :: Markup :: HTML

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src